--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
+    "config:js-lib",
+		"helpers:pinGitHubActionDigests",
+		":automergeTypes",
+		":automergeLinters",
+		":automergeTesters",
+		":automergeRequireAllStatusChecks",
+		"npm:unpublishSafe",
+		"helpers:disableTypesNodeMajor"
   ]
 }
