--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
 	"description": "Modern alternative ESLint configuration for Next.js",
 	"type": "commonjs",
 	"main": "index.js",
+	"exports": {
+		".": {
+			"default": "./index.js"
+		},
+		"./package.json": "./package.json"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -13,6 +19,7 @@
 		"eslint-plugin-import-x": "^4.16.1",
 		"eslint-plugin-jsx-a11y-x": "^0.1.1",
 		"eslint-plugin-react-hooks": "^5.2.0",
+		"globals": "^16.4.0",
 		"typescript-eslint": "^8.44.0"
 	},
 	"peerDependencies": {
